# WebCam_MicrosoftMediaFoundation

./: CMakeLists.txt  README.md
include/: Media.h
src/: Media.cpp  main.cpp
